[gd_scene load_steps=67 format=3 uid="uid://wlkl8r6ddwnr"]

[ext_resource type="Script" uid="uid://brgnvkrn8nkkp" path="res://Scripts/cannon.gd" id="1_3uv2y"]
[ext_resource type="Texture2D" uid="uid://b0ruqh4ad455v" path="res://Slime1/Death/Slime1_Death_body.png" id="2_cwei4"]
[ext_resource type="Texture2D" uid="uid://bcdxegyjk6mjr" path="res://Slime1/Run/Slime1_Run_body.png" id="2_ognwi"]
[ext_resource type="Texture2D" uid="uid://c8piajemohmrw" path="res://Slime1/Idle/Slime1_Idle_body.png" id="3_360ba"]
[ext_resource type="Texture2D" uid="uid://crq170u8u5sq5" path="res://Health Icon en.png" id="3_g8i8a"]
[ext_resource type="Texture2D" uid="uid://c63xollw41cjx" path="res://Slime1/Hurt/Slime1_Hurt_body.png" id="4_0bf5w"]
[ext_resource type="Texture2D" uid="uid://dt2lcgavq20iu" path="res://Health Icon Bar 1.png" id="4_t1e62"]
[ext_resource type="Script" uid="uid://deog41bmmrpos" path="res://Scripts/health_component.gd" id="6_vxj2g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhcm6"]
bg_color = Color(0.490196, 0.227451, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t7p5"]
bg_color = Color(0.862745, 0.286275, 0.286275, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_guwed"]
atlas = ExtResource("2_cwei4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xglye"]
atlas = ExtResource("2_cwei4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vggju"]
atlas = ExtResource("2_cwei4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkcqs"]
atlas = ExtResource("2_cwei4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qpfc"]
atlas = ExtResource("2_cwei4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhxm4"]
atlas = ExtResource("2_cwei4")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cidoi"]
atlas = ExtResource("2_cwei4")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnj84"]
atlas = ExtResource("2_cwei4")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_umi4e"]
atlas = ExtResource("2_cwei4")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gocwh"]
atlas = ExtResource("2_cwei4")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwei4"]
atlas = ExtResource("2_ognwi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bf5w"]
atlas = ExtResource("2_ognwi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxj2g"]
atlas = ExtResource("2_ognwi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8i8a"]
atlas = ExtResource("2_ognwi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1e62"]
atlas = ExtResource("2_ognwi")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhcm6"]
atlas = ExtResource("2_ognwi")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t7p5"]
atlas = ExtResource("2_ognwi")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmjqw"]
atlas = ExtResource("2_ognwi")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys1l4"]
atlas = ExtResource("4_0bf5w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r3rr"]
atlas = ExtResource("4_0bf5w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14mx4"]
atlas = ExtResource("4_0bf5w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kli7s"]
atlas = ExtResource("4_0bf5w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fsci"]
atlas = ExtResource("4_0bf5w")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a13q8"]
atlas = ExtResource("3_360ba")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qid1"]
atlas = ExtResource("3_360ba")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_drmu8"]
atlas = ExtResource("3_360ba")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2410"]
atlas = ExtResource("3_360ba")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_itg28"]
atlas = ExtResource("3_360ba")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_045ar"]
atlas = ExtResource("3_360ba")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgsjk"]
atlas = ExtResource("3_360ba")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3834d"]
atlas = ExtResource("3_360ba")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bhqu"]
atlas = ExtResource("3_360ba")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_voojk"]
atlas = ExtResource("3_360ba")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qkn8"]
atlas = ExtResource("3_360ba")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iyr0"]
atlas = ExtResource("3_360ba")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3i65"]
atlas = ExtResource("3_360ba")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0oft"]
atlas = ExtResource("3_360ba")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyg0k"]
atlas = ExtResource("3_360ba")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvm6v"]
atlas = ExtResource("3_360ba")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy72n"]
atlas = ExtResource("3_360ba")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf2je"]
atlas = ExtResource("3_360ba")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uago"]
atlas = ExtResource("3_360ba")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgdwo"]
atlas = ExtResource("3_360ba")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfyy3"]
atlas = ExtResource("3_360ba")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl4qd"]
atlas = ExtResource("3_360ba")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihd82"]
atlas = ExtResource("3_360ba")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2bgx"]
atlas = ExtResource("3_360ba")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubo5r"]
atlas = ExtResource("3_360ba")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87dco"]
atlas = ExtResource("3_360ba")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jq6r"]
atlas = ExtResource("3_360ba")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhsgn"]
atlas = ExtResource("3_360ba")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f46s"]
atlas = ExtResource("3_360ba")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u3vl"]
atlas = ExtResource("3_360ba")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_guwed"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_guwed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xglye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vggju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkcqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qpfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhxm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cidoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnj84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umi4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gocwh")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwei4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bf5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxj2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8i8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1e62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhcm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmjqw")
}],
"loop": true,
"name": &"firing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys1l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r3rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14mx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kli7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fsci")
}],
"loop": false,
"name": &"hurt",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a13q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qid1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drmu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2410")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itg28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_045ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgsjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3834d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bhqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voojk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qkn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iyr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3i65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0oft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyg0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvm6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy72n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf2je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uago")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgdwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfyy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl4qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihd82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2bgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubo5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87dco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jq6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhsgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f46s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u3vl")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xglye"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o8eby"]
radius = 7.0

[node name="Cannon" type="StaticBody2D"]
script = ExtResource("1_3uv2y")

[node name="CannonHealthBar UI" type="Node2D" parent="."]
z_index = 1
scale = Vector2(0.405935, 0.374051)

[node name="CannonHealthBar" type="ProgressBar" parent="CannonHealthBar UI"]
offset_left = -16.0
offset_top = -36.0
offset_right = 27.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_vhcm6")
theme_override_styles/fill = SubResource("StyleBoxFlat_6t7p5")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="HealthIconEn" type="Sprite2D" parent="CannonHealthBar UI"]
position = Vector2(-17, -36)
texture = ExtResource("3_g8i8a")

[node name="HealthIconBar1" type="Sprite2D" parent="CannonHealthBar UI"]
position = Vector2(15, -34)
texture = ExtResource("4_t1e62")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_guwed")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.66882

[node name="Head" type="Node2D" parent="AnimatedSprite2D"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedSprite2D/Head"]
sprite_frames = SubResource("SpriteFrames_xglye")

[node name="HeadHitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_o8eby")

[node name="FirePoint" type="Marker2D" parent="."]

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("6_vxj2g")
